# pipe1-license-server

./: .gitignore  README.md  pyproject.toml
deploy/lightsail/: .env.example  Caddyfile  backup_postgres.sh  docker-compose.yml  pipe1
docs/: License_Server_Command_Guide.md  License_Server_MVP_Implementation.md  Training_Data_Upload_Requirements.md
server/license_server/: Dockerfile
src/pipe1_license_server/: __init__.py  admin.py  admin_auth.py  admin_cli.py  admin_web.py  app.py  db.py  models.py  releases.py  settings.py  signing.py
tests/: test_admin_web.py  test_deployment_assets.py  test_license_admin_operations.py  test_license_id_lengths.py  test_license_server_mvp.py  test_security_hardening.py  test_signing.py  test_training_authorization_and_consent.py  test_update_releases.py
