[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipe1-license-server"
version = "0.1.0"
description = "Pipe1 license, entitlement, and training data intake server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "SQLAlchemy>=2.0.35",
  "alembic>=1.13.3",
  "pydantic-settings>=2.6.0",
  "cryptography>=43.0.1",
  "Pillow>=10.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.2",
]
server = [
  "uvicorn[standard]>=0.32.0",
  "psycopg[binary]>=3.2.0",
]

[project.scripts]
pipe1-admin = "pipe1_license_server.admin_cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
